...
import { QueryBoundary } from "../QueryBoundary";
import { trpc } from "../../trpc";
import { CardRow } from "./CardRow";
import { EntityCard } from "./Card";
import { ChipRow } from "./ChipRow";

const INSTRUMENTS = [
  {
    label: "Keyboard",
    icon: <MaterialIcons name="piano" size={24} color="white" />,
  },
  {
    label: "Trumpet",
...
